--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "description": "Tamper the AppDynamics UI to demo almost anything",
   "dependencies": {
     "codemirror": "^5.22.0",
     "react": "^15.4.1",
@@ -6,6 +7,7 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "react-toggle-button": "^2.1.0",
+    "ini": "^1.3.4",
     "redux": "^3.6.0",
     "uuid": "^3.0.1"
   },
@@ -20,9 +22,6 @@
     "gulp-less": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.9.1",
-    "ini": "^1.3.4",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
