--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "version": "0.3",
   "author": "Severin Neumann <severin.neumann@appdynamics.com>",
   "homepage_url": "https://singularity.jira.com/wiki/x/OQBuD",
-
+  "content_security_policy": "script-src 'self' https://apis.google.com; object-src 'self'",
   "icons": {
 	"16": "icons/monkey_16.png",
 	"48": "icons/monkey_48.png",
@@ -22,12 +22,16 @@
       "js": ["js/monkey.js"]
     }
   ],
+  "background": {
+    "page": "background.html"
+  },
   "options_page": "options.html",
   "browser_action": {
     "default_icon": "icons/monkey_16.png",
+    "default_title": "DemoMonkey",
     "default_popup": "popup.html"
   },
   "permissions": [
-    "storage", "tabs", "activeTab", "http://*/*", "https://*/*"
+    "storage", "tabs", "activeTab", "http://*/*", "https://*/*", "downloads", "contextMenus"
   ]
 }
