--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "codemirror": "^5.22.0",
     "ini": "^1.3.4",
     "react": "^15.4.1",
+    "react-chrome-redux": "^1.3.0",
     "react-codemirror": "^0.3.0",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
