--- a/manifest.json
+++ b/manifest.json
@@ -1,37 +1,35 @@
 {
-  "manifest_version": 2,
+    "manifest_version": 2,
 
-  "name": "DemoMonkey",
-  "description": "Tamper the AppDynamics UI to demo almost anything",
-  "version": "0.4.0",
-  "author": "Severin Neumann <severin.neumann@appdynamics.com>",
-  "homepage_url": "https://singularity.jira.com/wiki/x/OQBuD",
-  "content_security_policy": "script-src 'self' https://apis.google.com; object-src 'self'",
-  "icons": {
-	"16": "icons/monkey_16.png",
-	"48": "icons/monkey_48.png",
-	"128": "icons/monkey_128.png"
-  },
-  "web_accessible_resources": [
-    "manifest.json",
-    "templates/*"
-  ],
-  "content_scripts": [
-    {
-      "matches": ["http://*/*", "https://*/*"],
-      "js": ["js/monkey.js"]
-    }
-  ],
-  "background": {
-    "page": "background.html"
-  },
-  "options_page": "options.html",
-  "browser_action": {
-    "default_icon": "icons/monkey_16.png",
-    "default_title": "DemoMonkey",
-    "default_popup": "popup.html"
-  },
-  "permissions": [
-    "storage", "tabs", "activeTab", "http://*/*", "https://*/*", "downloads", "contextMenus"
-  ]
+    "name": "DemoMonkey",
+    "description": "Tamper the AppDynamics UI to demo almost anything",
+    "version": "0.4.1",
+    "author": "Severin Neumann <severin.neumann@appdynamics.com>",
+    "homepage_url": "https://singularity.jira.com/wiki/x/OQBuD",
+    "content_security_policy": "script-src 'self' https://apis.google.com; object-src 'self'",
+    "icons": {
+        "16": "icons/monkey_16.png",
+        "48": "icons/monkey_48.png",
+        "128": "icons/monkey_128.png"
+    },
+    "web_accessible_resources": [
+        "manifest.json",
+        "templates/*"
+    ],
+    "content_scripts": [{
+        "matches": ["http://*/*", "https://*/*"],
+        "js": ["js/monkey.js"]
+    }],
+    "background": {
+        "page": "background.html"
+    },
+    "options_page": "options.html",
+    "browser_action": {
+        "default_icon": "icons/monkey_16.png",
+        "default_title": "DemoMonkey",
+        "default_popup": "popup.html"
+    },
+    "permissions": [
+        "storage", "tabs", "activeTab", "http://*/*", "https://*/*", "downloads", "contextMenus"
+    ]
 }
