--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-less": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.9.1",
+    "mocha": "^3.2.0",
     "stringify": "^5.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
