--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
 
     "name": "DemoMonkey",
-    "description": "Tamper the AppDynamics UI to demo almost anything",
+    "description": "Tamper your application's UI to demo almost anything",
     "version": "0.4.1",
     "author": "Severin Neumann <severin.neumann@appdynamics.com>",
     "homepage_url": "https://singularity.jira.com/wiki/x/OQBuD",
