--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^5.0.1",
     "react-toggle-button": "^2.1.0",
     "redux": "^3.6.0",
+    "showdown": "^1.6.4",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
