--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "codemirror": "^5.22.0",
     "ini": "^1.3.4",
+    "json5": "^0.5.1",
     "react": "^15.4.1",
     "react-chrome-redux": "^1.3.0",
     "react-codemirror": "^0.3.0",
