--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 8,
         "sourceType": "module",
@@ -7,12 +8,18 @@
             "jsx": true
         }
     },
-    "extends": "standard",
+    "extends": [
+	"standard",
+	"plugin:react/recommended",
+	"plugin:import/errors",
+	"plugin:import/warnings"
+    ],
     "plugins": [
         "standard",
         "promise",
         "json",
-        "react"
+        "react",
+	"import"
     ],
     "rules": {
         "react/jsx-uses-vars": 1,
