--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "chai-webdriver": "^1.2.0",
     "chromedriver": "^2.27.3",
     "eslint": "^3.16.1",
