Fixed #20 - Double-Check for Delete

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-chrome-redux": "^1.3.0",
     "react-codemirror": "^0.3.0",
     "react-dom": "^15.4.1",
+    "react-popup": "^0.6.0",
     "react-redux": "^5.0.1",
     "react-toggle-button": "^2.1.0",
     "redux": "^3.6.0",
@@ -25,6 +26,7 @@
     "chai-as-promised": "^6.0.0",
     "chai-webdriver": "^1.2.0",
     "chromedriver": "^2.27.3",
+    "csscomb": "^4.0.1",
     "eslint": "^3.16.1",
     "eslint-config-standard": "^7.0.0",
     "eslint-plugin-import": "^2.2.0",
