custom mode for codemirror + gulp pack

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "gulp-image-resize": "^0.11.0",
     "gulp-less": "^3.3.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.9.1",
+    "gulp-zip": "^4.0.0",
     "less": "^2.7.2",
     "mocha": "^3.2.0",
     "selenium-webdriver": "^3.3.0",
