--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^15.4.1",
     "react-popup": "^0.6.0",
     "react-redux": "^5.0.1",
+    "react-timeago": "^3.2.0",
     "react-toggle-button": "^2.1.0",
     "redux": "^3.6.0",
     "showdown": "^1.6.4",
