--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ini": "^1.3.4",
     "json5": "^0.5.1",
     "mousetrap": "^1.6.0",
+    "prop-types": "^15.5.8",
     "react": "^15.4.1",
     "react-chrome-redux": "^1.3.0",
     "react-codemirror": "^0.3.0",
