--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "description": "Tamper the AppDynamics UI to demo almost anything",
   "dependencies": {
+    "axios": "^0.16.1",
     "codemirror": "^5.22.0",
+    "github-api": "^3.0.0",
     "ini": "^1.3.4",
     "json5": "^0.5.1",
     "mousetrap": "^1.6.0",
