--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "github-api": "^3.0.0",
     "ini": "^1.3.4",
     "json5": "^0.5.1",
+    "jszip": "^3.1.3",
     "mousetrap": "^1.6.0",
     "prop-types": "^15.5.8",
     "react": "^15.4.1",
