--- a/package.json
+++ b/package.json
@@ -1,58 +1,62 @@
 {
-  "description": "Tamper the AppDynamics UI to demo almost anything",
+  "name": "demomonkey",
+  "license": "Apache-2.0",
+  "description": "Tamper your Web UI to demo almost anything",
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.17.1",
     "github-api": "^3.0.0",
-    "ini": "^1.3.4",
+    "ini": "^1.3.5",
     "json5": "^0.5.1",
-    "jszip": "^3.1.4",
-    "mousetrap": "^1.6.0",
-    "prop-types": "^15.5.8",
-    "react": "^15.4.1",
-    "react-ace": "^5.2.0",
-    "react-chrome-redux": "^1.3.0",
-    "react-dom": "^15.4.1",
+    "jszip": "^3.1.5",
+    "mousetrap": "^1.6.1",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-ace": "^5.8.0",
+    "react-chrome-redux": "^1.4.0",
+    "react-dom": "^16.2.0",
     "react-popup": "^0.8.0",
-    "react-redux": "^5.0.1",
-    "react-timeago": "^3.2.0",
-    "react-toggle-button": "^2.1.0",
-    "redux": "^3.6.0",
-    "showdown": "^1.7.3",
-    "uuid": "^3.0.1"
+    "react-redux": "^5.0.6",
+    "react-timeago": "^3.4.3",
+    "react-toggle-button": "^2.2.0",
+    "redux": "^3.7.2",
+    "showdown": "^1.8.4",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^8.0.0",
+    "browserify": "^14.5.0",
     "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
+    "chai-as-promised": "^7.1.1",
     "chai-webdriver": "^1.2.0",
-    "chromedriver": "^2.27.3",
-    "csscomb": "^4.0.1",
-    "eslint": "^3.16.1",
-    "eslint-config-standard": "^7.0.0",
-    "eslint-plugin-import": "^2.2.0",
+    "chromedriver": "^2.33.2",
+    "csscomb": "^4.2.0",
+    "eslint": "^4.12.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^6.10.0",
-    "eslint-plugin-standard": "^2.1.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-standard": "^3.0.1",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
-    "gulp-image-resize": "^0.11.0",
-    "gulp-less": "^3.3.0",
+    "gulp-image-resize": "^0.13.0",
+    "gulp-less": "^3.3.2",
     "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-sourcemaps": "^1.9.1",
+    "gulp-replace": "^0.6.1",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-zip": "^4.0.0",
-    "less": "^2.7.2",
-    "mocha": "^3.2.0",
-    "selenium-webdriver": "^3.3.0",
-    "stringify": "^5.1.0",
-    "uglifyify": "^3.0.4",
+    "less": "^2.7.3",
+    "mocha": "^4.0.1",
+    "selenium-webdriver": "^3.6.0",
+    "stringify": "^5.2.0",
+    "uglifyify": "^4.0.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
