Updated manifest & package

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Tamper your application's UI to demo almost anything",
   "version": "1.3.0",
   "author": "Severin Neumann <severin.neumann@appdynamics.com>",
-  "homepage_url": "https://github.com/svrnm/demomonkey/",
+  "homepage_url": "https://github.com/Appdynamics/demomonkey/",
   "content_security_policy": "script-src 'self' https://apis.google.com https://cdn.appdynamics.com/; object-src 'self'",
   "icons": {
     "16": "icons/monkey_16.png",
