--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "Tamper your Web UI to demo almost anything",
   "dependencies": {
     "axios": "^0.17.1",
+    "deepmerge": "^2.0.1",
     "github-api": "^3.0.0",
     "ini": "^1.3.5",
     "json5": "^0.5.1",
@@ -20,6 +21,7 @@
     "react-redux": "^5.0.6",
     "react-timeago": "^3.4.3",
     "react-toggle-button": "^2.2.0",
+    "react-treebeard": "^2.1.0",
     "redux": "^3.7.2",
     "showdown": "^1.8.4",
     "uuid": "^3.1.0"
