--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deepmerge": "^2.0.1",
     "github-api": "^3.0.0",
     "ini": "^1.3.5",
+    "js-base64": "^2.4.0",
     "json5": "^0.5.1",
     "jszip": "^3.1.5",
     "mousetrap": "^1.6.1",
