--- a/manifest.json
+++ b/manifest.json
@@ -33,5 +33,28 @@
   },
   "permissions": [
     "storage", "unlimitedStorage", "tabs", "activeTab", "http://*/*", "https://*/*", "downloads", "contextMenus"
-  ]
+  ],
+  "commands": {
+    "toggle-hotkey-group-1": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+1",
+        "mac": "Command+Shift+1"
+      },
+      "description": "Toggle hotkey group 1"
+    },
+    "toggle-hotkey-group-2": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+2",
+        "mac": "Command+Shift+2"
+      },
+      "description": "Toggle hotkey group 2"
+    },
+    "toggle-hotkey-group-3": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+3",
+        "mac": "Command+Shift+3"
+      },
+      "description": "Toggle hotkey group 3"
+    }
+  }
 }
