--- a/package.json
+++ b/package.json
@@ -9,34 +9,35 @@
   },
   "description": "Tamper your Web UI to demo almost anything",
   "dependencies": {
-    "axios": "^0.17.1",
+    "axios": "^0.18.0",
     "color": "^3.0.0",
     "deepmerge": "^2.1.1",
     "github-api": "^3.0.0",
     "ini": "^1.3.5",
-    "js-base64": "^2.4.5",
-    "json5": "^0.5.1",
+    "js-base64": "^2.4.9",
+    "json5": "^2.0.1",
     "jszip": "^3.1.5",
     "keymaster": "^1.6.2",
     "mousetrap": "^1.6.2",
+    "nunjucks": "^3.1.3",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-ace": "^5.10.0",
+    "react": "^16.4.2",
+    "react-ace": "^6.1.4",
     "react-chrome-redux": "^1.5.1",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.4.2",
     "react-popup": "^0.9.3",
     "react-redux": "^5.0.7",
-    "react-select": "^1.2.1",
+    "react-select": "^1.3.0",
     "react-timeago": "^4.1.9",
     "react-toggle-button": "^2.2.0",
     "react-treebeard": "^2.1.0",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "showdown": "^1.8.6",
-    "uuid": "^3.3.0"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
+    "babel-eslint": "^8.2.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -46,24 +47,24 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^7.1.1",
     "chai-webdriver": "^1.2.0",
-    "chromedriver": "^2.40.0",
+    "chromedriver": "^2.41.0",
     "csscomb": "^4.2.0",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-json": "^1.2.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-json": "^1.2.1",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-image-resize": "^0.13.0",
     "gulp-less": "^3.5.0",
-    "gulp-rename": "^1.3.0",
+    "gulp-rename": "^1.4.0",
     "gulp-replace": "^0.6.1",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-zip": "^4.1.0",
+    "gulp-zip": "^4.2.0",
     "less": "^2.7.3",
     "mocha": "^4.1.0",
     "selenium-webdriver": "^3.6.0",
