--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "version": "3.0.3",
   "author": "Severin Neumann <severin.neumann@altmuehlnet.de>",
   "homepage_url": "https://github.com/Appdynamics/demomonkey/",
-  "content_security_policy": "script-src 'self' https://apis.google.com https://cdn.appdynamics.com/; object-src 'self'",
+  "content_security_policy": "script-src 'self' 'unsafe-eval' https://apis.google.com https://cdn.appdynamics.com/; object-src 'self'",
   "icons": {
     "16": "icons/monkey_16.png",
     "48": "icons/monkey_48.png",
