--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "keymaster": "^1.6.2",
     "mousetrap": "^1.6.2",
     "nunjucks": "^3.1.6",
+    "pouchdb": "^7.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-ace": "^6.3.2",
