Some fixes for dashboarding

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "babel-preset-es2015": "^6.24.1",
     "color": "^3.1.0",
+    "color-string": "^1.5.3",
     "deepmerge": "^2.2.1",
     "github-api": "^3.0.0",
     "ini": "^1.3.5",
@@ -38,6 +39,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "acorn": "^6.1.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -53,11 +55,11 @@
     "csscomb": "^4.2.0",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-json": "^1.3.2",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-react": "^7.12.0",
+    "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^3.1.0",
     "gulp": "^4.0.0",
     "gulp-clean": "^0.4.0",
