--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,5 +33,10 @@
       "named": "ignore",
       "asyncArrow": "ignore"
     }]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
