--- a/package.json
+++ b/package.json
@@ -10,28 +10,27 @@
   "description": "Tamper your Web UI to demo almost anything",
   "dependencies": {
     "axios": "^0.18.0",
-    "babel-preset-es2015": "^6.24.1",
     "color": "^3.1.0",
     "color-string": "^1.5.3",
     "deepmerge": "^2.2.1",
     "github-api": "^3.0.0",
     "ini": "^1.3.5",
-    "js-base64": "^2.5.0",
+    "js-base64": "^2.5.1",
     "json5": "^2.1.0",
-    "jszip": "^3.1.5",
+    "jszip": "^3.2.0",
     "keymaster": "^1.6.2",
-    "mousetrap": "^1.6.2",
-    "nunjucks": "^3.1.6",
+    "mousetrap": "^1.6.3",
+    "nunjucks": "^3.2.0",
     "pouchdb": "^7.0.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-ace": "^6.3.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.4",
+    "react-ace": "^6.4.0",
     "react-chrome-redux": "^1.5.1",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.4",
     "react-popup": "^0.9.3",
     "react-redux": "^5.1.1",
     "react-select": "^1.3.0",
-    "react-timeago": "^4.1.9",
+    "react-timeago": "^4.4.0",
     "react-toggle-button": "^2.2.0",
     "react-treebeard": "^2.1.0",
     "redux": "^4.0.1",
@@ -39,24 +38,25 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.4.0",
     "acorn": "^6.1.1",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babelify": "^8.0.0",
+    "babelify": "^10.0.0",
     "browserify": "^16.2.3",
     "chai": "^3.5.0",
     "chai-as-promised": "^7.1.1",
     "chai-webdriver": "^1.2.0",
-    "chromedriver": "^2.45.0",
+    "chromedriver": "^2.46.0",
     "csscomb": "^4.2.0",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-json": "^1.3.2",
+    "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.12.4",
@@ -67,7 +67,7 @@
     "gulp-less": "^4.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^0.6.1",
-    "gulp-sourcemaps": "^2.6.4",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-zip": "^4.2.0",
     "less": "^3.9.0",
     "mocha": "^4.1.0",
