--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "DemoMonkey",
   "description": "Tamper your application's UI to demo almost anything",
-  "version": "4.1.2",
+  "version": "4.1.3",
   "author": "Severin Neumann <severin.neumann@altmuehlnet.de>",
   "homepage_url": "https://github.com/Appdynamics/demomonkey/",
   "content_security_policy": "script-src 'self' 'unsafe-eval' https://apis.google.com https://cdn.appdynamics.com/; object-src 'self'",
@@ -35,6 +35,16 @@
     "storage", "unlimitedStorage", "tabs", "activeTab", "<all_urls>", "downloads", "contextMenus", "identity", "webRequest", "webRequestBlocking"
   ],
   "commands": {
+    "live-mode": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+L",
+        "mac": "Command+Shift+3"
+      },
+      "description": "Live Mode"
+    },
+    "debug-mode": {
+      "description": "Debug Mode"
+    },
     "toggle-hotkey-group-1": {
       "suggested_key": {
         "default": "Ctrl+Shift+1",
@@ -50,10 +60,6 @@
       "description": "Toggle Group 2"
     },
     "toggle-hotkey-group-3": {
-      "suggested_key": {
-        "default": "Ctrl+Shift+3",
-        "mac": "Command+Shift+3"
-      },
       "description": "Toggle Group 3"
     },
     "toggle-hotkey-group-4": {
