Moved debug elements into ModeManager ; fixed #51

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "DemoMonkey",
   "description": "Tamper your application's UI to demo almost anything",
-  "version": "5.0.0",
+  "version": "5.1.0",
   "author": "Severin Neumann <severin.neumann@altmuehlnet.de>",
   "homepage_url": "https://github.com/Appdynamics/demomonkey/",
   "content_security_policy": "script-src 'self' 'unsafe-eval' https://apis.google.com https://cdn.appdynamics.com/; object-src 'self'",
@@ -12,8 +12,7 @@
     "128": "icons/monkey_128.png"
   },
   "web_accessible_resources": [
-    "manifest.json",
-    "templates/*"
+    "manifest.json"
   ],
   "content_scripts": [{
     "matches": ["http://*/*", "https://*/*"],
