--- a/package.json
+++ b/package.json
@@ -10,68 +10,65 @@
   "description": "Tamper your Web UI to demo almost anything",
   "dependencies": {
     "axios": "^0.19.0",
-    "color": "^3.1.0",
+    "color": "^3.1.2",
     "color-string": "^1.5.3",
-    "deepmerge": "^2.2.1",
-    "github-api": "^3.2.2",
+    "deepmerge": "^4.2.2",
     "ini": "^1.3.5",
     "js-base64": "^2.5.1",
-    "json5": "^2.1.0",
-    "jszip": "^3.2.0",
+    "json5": "^2.1.1",
+    "jszip": "^3.2.2",
     "keymaster": "^1.6.2",
     "mousetrap": "^1.6.3",
-    "nunjucks": "^3.2.0",
-    "pouchdb": "^7.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.4",
-    "react-ace": "^7.0.0",
-    "react-chrome-redux": "^1.5.1",
-    "react-dom": "^16.8.4",
-    "react-popup": "^0.9.3",
-    "react-redux": "^5.1.1",
+    "react": "^16.11.0",
+    "react-ace": "^7.0.5",
+    "webext-redux": "^2.1.4",
+    "react-dom": "^16.11.0",
+    "react-popup": "^0.10.0",
+    "react-redux": "^7.1.3",
     "react-select": "^1.3.0",
     "react-timeago": "^4.4.0",
     "react-toggle-button": "^2.2.0",
     "react-treebeard": "^2.1.0",
-    "redux": "^4.0.1",
-    "showdown": "^1.9.0",
-    "uuid": "^3.3.2"
+    "redux": "^4.0.4",
+    "showdown": "^1.9.1",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.4.0",
-    "acorn": "^6.1.1",
-    "babel-eslint": "^8.2.6",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@babel/register": "^7.7.0",
+    "acorn": "^7.1.0",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babelify": "^10.0.0",
-    "browserify": "^16.2.3",
-    "chai": "^3.5.0",
+    "browserify": "^16.5.0",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-webdriver": "^1.2.0",
-    "chromedriver": "^2.46.0",
-    "csscomb": "^4.2.0",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-json": "^1.4.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-standard": "^4.0.0",
-    "gulp": "^4.0.0",
+    "chromedriver": "^78.0.1",
+    "csscomb": "^4.3.0",
+    "eslint": "^6.6.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-json": "^2.0.1",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
-    "gulp-image-resize": "^0.13.0",
+    "gulp-derequire": "^2.1.0",
+    "gulp-image-resize": "^0.13.1",
     "gulp-less": "^4.0.1",
     "gulp-rename": "^1.4.0",
-    "gulp-replace": "^0.6.1",
+    "gulp-replace": "^1.0.0",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-util": "^3.0.8",
-    "gulp-zip": "^4.2.0",
-    "less": "^3.9.0",
-    "mocha": "^4.1.0",
+    "gulp-zip": "^5.0.1",
+    "less": "^3.10.3",
+    "mocha": "^6.2.2",
     "selenium-webdriver": "^3.6.0",
     "stringify": "^5.2.0",
     "vinyl-buffer": "^1.0.1",
