--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "DemoMonkey",
   "description": "Tamper your application's UI to demo almost anything",
-  "version": "5.5.0",
+  "version": "6.0.0",
   "author": "Severin Neumann <severin.neumann@altmuehlnet.de>",
   "homepage_url": "https://github.com/Appdynamics/demomonkey/",
   "content_security_policy": "script-src 'self' 'unsafe-eval' https://apis.google.com https://cdn.appdynamics.com/; object-src 'self'",
@@ -34,7 +34,7 @@
     "default_popup": "popup.html"
   },
   "permissions": [
-    "storage", "unlimitedStorage", "tabs", "activeTab", "downloads", "contextMenus", "identity", "webRequest", "webRequestBlocking"
+    "storage", "unlimitedStorage", "activeTab", "downloads", "contextMenus", "webRequest", "webRequestBlocking"
   ],
   "optional_permissions": [
     "<all_urls>"
