--- a/package.json
+++ b/package.json
@@ -9,68 +9,70 @@
   },
   "description": "Tamper your Web UI to demo almost anything",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "color": "^3.1.2",
     "color-string": "^1.5.3",
     "deep-is": "^0.1.3",
     "deepmerge": "^4.2.2",
     "ini": "^1.3.5",
-    "js-base64": "^2.5.1",
+    "js-base64": "^2.5.2",
     "json5": "^2.1.1",
     "jszip": "^3.2.2",
     "keymaster": "^1.6.2",
-    "mousetrap": "^1.6.3",
+    "lodash.omit": "^4.5.0",
+    "moment": "^2.24.0",
+    "mousetrap": "^1.6.5",
     "prop-types": "^15.7.2",
-    "react": "^16.11.0",
+    "react": "^16.13.0",
     "react-ace": "^7.0.5",
-    "react-dom": "^16.11.0",
+    "react-dom": "^16.13.0",
     "react-popup": "^0.10.0",
-    "react-redux": "^7.1.3",
+    "react-redux": "^7.2.0",
     "react-select": "^1.3.0",
     "react-timeago": "^4.4.0",
     "react-toggle-button": "^2.2.0",
     "react-treebeard": "^2.1.0",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "showdown": "^1.9.1",
-    "uuid": "^3.3.3",
+    "uuid": "^7.0.2",
     "v8n": "^1.3.3",
-    "webext-redux": "^2.1.4"
+    "webext-redux": "^2.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-proposal-class-properties": "^7.7.0",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-react": "^7.7.0",
-    "@babel/register": "^7.7.0",
-    "acorn": "^7.1.0",
-    "babel-eslint": "^10.0.3",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/register": "^7.8.6",
+    "acorn": "^7.1.1",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
-    "chai": "^4.2.0",
+    "chai": "^3.5.0",
     "chai-as-promised": "^7.1.1",
     "chai-webdriver": "^1.2.0",
-    "chromedriver": "^79.0.0",
+    "chromedriver": "^80.0.1",
     "csscomb": "^4.3.0",
-    "eslint": "^6.6.0",
+    "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-json": "^2.0.1",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-json": "^2.1.0",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-standard": "^4.0.1",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-derequire": "^2.1.0",
     "gulp-image-resize": "^0.13.1",
     "gulp-less": "^4.0.1",
-    "gulp-rename": "^1.4.0",
+    "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-zip": "^5.0.1",
-    "less": "^3.10.3",
-    "mocha": "^6.2.2",
+    "less": "^3.11.1",
+    "mocha": "^7.1.0",
     "selenium-webdriver": "^3.6.0",
     "stringify": "^5.2.0",
     "vinyl-buffer": "^1.0.1",
