--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "color-string": "^1.5.3",
     "deep-is": "^0.1.3",
     "deepmerge": "^4.2.2",
-    "gulp-cli": "^2.2.0",
-    "gulp-gm": "0.0.9",
     "ini": "^1.3.5",
     "js-base64": "^2.5.2",
     "json5": "^2.1.2",
@@ -30,22 +28,21 @@
     "react-dom": "^16.13.1",
     "react-popup": "^0.10.0",
     "react-redux": "^7.2.0",
-    "react-select": "^1.3.0",
-    "react-timeago": "^4.4.0",
+    "react-select": "^3.1.0",
+    "react-switch": "^5.0.1",
     "react-toggle-button": "^2.2.0",
     "react-treebeard": "^2.1.0",
     "redux": "^4.0.5",
     "showdown": "^1.9.1",
     "uuid": "^7.0.2",
-    "v8n": "^1.3.3",
     "webext-redux": "^2.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
+    "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/register": "^7.8.6",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.1",
+    "@babel/register": "^7.9.0",
     "acorn": "^7.1.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -57,7 +54,7 @@
     "chromedriver": "^80.0.1",
     "csscomb": "^4.3.0",
     "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
+    "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-node": "^11.0.0",
@@ -65,6 +62,8 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-standard": "^4.0.1",
     "gulp": "^4.0.2",
+    "gulp-cli": "^2.2.0",
+    "gulp-gm": "0.0.9",
     "gulp-clean": "^0.4.0",
     "gulp-derequire": "^2.1.0",
     "gulp-image-resize": "^0.13.1",
