--- a/package.json
+++ b/package.json
@@ -9,75 +9,81 @@
   },
   "description": "Tamper your Web UI to demo almost anything",
   "dependencies": {
-    "axios": "^0.19.2",
-    "color": "^3.1.2",
-    "color-string": "^1.5.3",
+    "axios": "^0.20.0",
+    "color": "^3.1.3",
+    "color-string": "^1.5.4",
     "deep-is": "^0.1.3",
     "deepmerge": "^4.2.2",
     "ini": "^1.3.5",
-    "js-base64": "^2.5.2",
+    "js-base64": "^3.5.2",
     "json5": "^2.1.2",
-    "jszip": "^3.2.2",
+    "jszip": "^3.5.0",
     "keymaster": "^1.6.2",
     "lodash.omit": "^4.5.0",
-    "moment": "^2.24.0",
+    "moment": "^2.29.1",
     "mousetrap": "^1.6.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-ace": "^7.0.5",
     "react-dom": "^16.13.1",
     "react-popup": "^0.10.0",
-    "react-redux": "^7.2.0",
+    "react-redux": "^7.2.1",
     "react-select": "^3.1.0",
     "react-switch": "^5.0.1",
     "react-toggle-button": "^2.2.0",
     "react-treebeard": "^2.1.0",
     "redux": "^4.0.5",
     "showdown": "^1.9.1",
-    "uuid": "^7.0.2",
-    "webext-redux": "^2.1.6"
+    "uuid": "^8.3.1",
+    "webext-redux": "^2.1.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/preset-react": "^7.9.1",
-    "@babel/register": "^7.9.0",
-    "acorn": "^7.1.1",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/register": "^7.11.5",
+    "acorn": "^8.0.4",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babelify": "^10.0.0",
-    "browserify": "^16.5.0",
+    "browserify": "^17.0.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^7.1.1",
-    "chai-webdriver": "^1.2.0",
-    "chromedriver": "^80.0.1",
+    "chai-webdriver": "^1.2.3",
+    "chromedriver": "^86.0.0",
     "csscomb": "^4.3.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.11.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-json": "^2.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-json": "^2.1.2",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-standard": "^4.0.1",
     "gulp": "^4.0.2",
-    "gulp-cli": "^2.2.0",
-    "gulp-gm": "0.0.9",
     "gulp-clean": "^0.4.0",
+    "gulp-cli": "^2.3.0",
     "gulp-derequire": "^2.1.0",
+    "gulp-gm": "0.0.9",
     "gulp-image-resize": "^0.13.1",
     "gulp-less": "^4.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-zip": "^5.0.1",
-    "less": "^3.11.1",
-    "mocha": "^7.1.1",
+    "gulp-zip": "^5.0.2",
+    "less": "^3.12.2",
+    "mocha": "^8.1.3",
     "selenium-webdriver": "^3.6.0",
     "stringify": "^5.2.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1"
+  },
+  "mocha": {
+    "recursive": true,
+    "require": [
+      "@babel/register"
+    ]
   }
 }
