--- a/manifest.json
+++ b/manifest.json
@@ -2,17 +2,20 @@
   "manifest_version": 2,
   "name": "DemoMonkey",
   "description": "Tamper your application's UI to demo almost anything",
-  "version": "6.1.0",
+  "version": "6.2.0",
   "author": "Severin Neumann <severin.neumann@altmuehlnet.de>",
   "homepage_url": "https://github.com/Appdynamics/demomonkey/",
-  "content_security_policy": "script-src 'self' 'unsafe-eval' https://apis.google.com https://cdn.appdynamics.com/; object-src 'self'",
+  "content_security_policy": "script-src 'self' 'unsafe-eval' https://apis.google.com; object-src 'self'",
   "icons": {
     "16": "icons/monkey_16.png",
     "48": "icons/monkey_48.png",
     "128": "icons/monkey_128.png"
   },
   "web_accessible_resources": [
-    "manifest.json"
+    "manifest.json",
+    "js/app.js.map",
+    "js/background.js.map",
+    "js/monkey.js.map",
   ],
   "content_scripts": [{
     "matches": ["http://*/*", "https://*/*"],
