--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
   "manifest_version": 2,
   "name": "DemoMonkey",
   "description": "Tamper your application's UI to demo almost anything",
-  "version": "6.2.0",
+  "version": "6.3.1",
   "author": "Severin Neumann <severin.neumann@altmuehlnet.de>",
   "homepage_url": "https://github.com/Appdynamics/demomonkey/",
-  "content_security_policy": "script-src 'self' 'unsafe-eval' https://apis.google.com; object-src 'self'",
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "icons": {
     "16": "icons/monkey_16.png",
     "48": "icons/monkey_48.png",
@@ -15,9 +15,9 @@
     "manifest.json",
     "js/app.js.map",
     "js/background.js.map",
-    "js/monkey.js.map",
+    "js/monkey.js.map"
   ],
-  "content_scripts": [{
+  "not_content_scripts": [{
     "matches": ["http://*/*", "https://*/*"],
     "js": ["js/monkey.js"],
     "all_frames": true,
@@ -26,7 +26,7 @@
   "background": {
     "page": "background.html"
   },
-  "devtools_page": "devtools.html",
+  "not_devtools_page": "devtools.html",
   "options_ui": {
     "page": "options.html",
     "open_in_tab": true
@@ -37,10 +37,10 @@
     "default_popup": "popup.html"
   },
   "permissions": [
-    "storage", "unlimitedStorage", "activeTab", "downloads", "contextMenus", "webRequest", "webRequestBlocking"
+    "storage", "unlimitedStorage", "activeTab", "contextMenus"
   ],
   "optional_permissions": [
-    "<all_urls>"
+    "<all_urls>", "webRequest", "webRequestBlocking"
   ],
   "commands": {
     "live-mode": {
