--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "color-string": "^1.5.4",
     "deep-is": "^0.1.3",
     "deepmerge": "^4.2.2",
+    "googleapis": "^67.0.0",
     "ini": "^2.0.0",
     "js-base64": "^3.6.0",
     "json5": "^2.1.2",
