Migrate from gulp to webpack

--- a/package.json
+++ b/package.json
@@ -7,25 +7,33 @@
     "type": "git",
     "url": "https://github.com/Appdynamics/demomonkey.git"
   },
+  "scripts": {
+    "test": "mocha",
+    "start": "webpack watch --mode=development",
+    "release": "webpack --mode=production --env RELEASE=stable && rm -r ./build-release",
+    "dev-release": "webpack --mode=production --env RELEASE=dev-channel && rm -r ./build-release"
+  },
   "description": "Tamper your Web UI to demo almost anything",
   "dependencies": {
+    "ace-builds": "^1.4.12",
     "axios": "^0.21.1",
     "color": "^3.1.3",
+    "color-name": "^1.1.4",
     "color-string": "^1.5.4",
     "deep-is": "^0.1.3",
     "deepmerge": "^4.2.2",
     "googleapis": "^67.0.0",
     "ini": "^2.0.0",
     "js-base64": "^3.6.0",
-    "json5": "^2.1.2",
+    "json5": "^2.2.0",
     "jszip": "^3.5.0",
-    "keymaster": "^1.6.2",
     "lodash.omit": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.5",
     "moment": "^2.29.1",
     "mousetrap": "^1.6.5",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
-    "react-ace": "^7.0.5",
+    "react-ace": "^9.3.0",
     "react-dom": "^16.14.0",
     "react-popup": "^0.10.0",
     "react-redux": "^7.2.2",
@@ -44,41 +52,34 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
-    "acorn": "^8.0.4",
     "babel-eslint": "^10.1.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babelify": "^10.0.0",
-    "browserify": "^17.0.0",
+    "babel-loader": "^8.2.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^7.1.1",
     "chai-webdriver": "^1.2.3",
     "chromedriver": "^87.0.0",
-    "csscomb": "^4.3.0",
-    "eslint": "^7.17.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.19.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-json": "^2.1.2",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.22.0",
-    "gulp": "^4.0.2",
-    "gulp-clean": "^0.4.0",
-    "gulp-cli": "^2.3.0",
-    "gulp-derequire": "^3.0.0",
-    "gulp-gm": "0.0.9",
-    "gulp-image-resize": "^0.13.1",
-    "gulp-less": "^4.0.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-zip": "^5.0.2",
-    "less": "^3.13.1",
+    "git-revision-webpack-plugin": "^3.0.6",
+    "html-webpack-plugin": "5.0.0-beta.6",
+    "jimp": "^0.16.1",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
     "mocha": "^8.2.1",
+    "postcss": "^8.2.4",
+    "raw-loader": "^4.0.2",
+    "responsive-loader": "^2.3.0",
     "selenium-webdriver": "^3.6.0",
-    "stringify": "^5.2.0",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.1"
+    "webpack": "^5.19.0",
+    "webpack-cli": "^4.5.0",
+    "zip-webpack-plugin": "^4.0.1"
   },
   "mocha": {
     "recursive": true,
