--- a/package.json
+++ b/package.json
@@ -19,25 +19,25 @@
     "axios": "^0.21.1",
     "color": "^3.1.3",
     "color-name": "^1.1.4",
-    "color-string": "^1.5.4",
+    "color-string": "^1.5.5",
     "deep-is": "^0.1.3",
     "deepmerge": "^4.2.2",
-    "googleapis": "^67.0.0",
+    "googleapis": "^68.0.0",
     "ini": "^2.0.0",
     "js-base64": "^3.6.0",
     "json5": "^2.2.0",
-    "jszip": "^3.5.0",
+    "jszip": "^3.6.0",
     "lodash.omit": "^4.5.0",
     "moment": "^2.29.1",
     "mousetrap": "^1.6.5",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-ace": "^9.3.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.2",
+    "react-ace": "^9.4.0",
+    "react-dom": "^17.0.2",
     "react-popup": "^0.10.0",
-    "react-redux": "^7.2.2",
-    "react-select": "^3.1.1",
-    "react-switch": "^5.0.1",
+    "react-redux": "^7.2.3",
+    "react-select": "^4.3.0",
+    "react-switch": "^6.0.0",
     "react-toggle-button": "^2.2.0",
     "react-treebeard": "^3.2.4",
     "redux": "^4.0.5",
@@ -46,39 +46,39 @@
     "webext-redux": "^2.1.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/register": "^7.12.10",
+    "@babel/core": "^7.13.14",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/register": "^7.13.14",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "chai": "^3.5.0",
+    "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-webdriver": "^1.2.3",
-    "chromedriver": "^88.0.0",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.0.1",
-    "eslint": "^7.19.0",
+    "chromedriver": "^89.0.0",
+    "copy-webpack-plugin": "^8.1.0",
+    "css-loader": "^5.2.0",
+    "eslint": "^7.23.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-json": "^2.1.2",
     "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.1",
     "git-revision-webpack-plugin": "^3.0.6",
-    "html-webpack-plugin": "5.0.0-beta.6",
+    "html-webpack-plugin": "5.3.1",
     "jimp": "^0.16.1",
     "less": "^4.1.1",
     "less-loader": "^8.0.0",
-    "mini-css-extract-plugin": "^1.3.5",
-    "mocha": "^8.2.1",
-    "postcss": "^8.2.4",
+    "mini-css-extract-plugin": "^1.4.0",
+    "mocha": "^8.2.9",
+    "postcss": "^8.2.9",
     "raw-loader": "^4.0.2",
     "responsive-loader": "^2.3.0",
-    "selenium-webdriver": "^3.6.0",
-    "webpack": "^5.19.0",
-    "webpack-cli": "^4.5.0",
+    "selenium-webdriver": "^4.0.0-beta.2",
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0",
     "webpack-extension-reloader": "^1.1.4",
     "zip-webpack-plugin": "^4.0.1"
   },
