--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "color-string": "^1.5.5",
     "deep-is": "^0.1.3",
     "deepmerge": "^4.2.2",
+    "fast-json-patch": "^3.0.0-1",
     "googleapis": "^68.0.0",
     "ini": "^2.0.0",
     "js-base64": "^3.6.0",
