--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "deep-is": "^0.1.3",
     "deepmerge": "^4.2.2",
     "fast-json-patch": "^3.0.0-1",
-    "googleapis": "^68.0.0",
+    "googleapis": "^71.0.0",
     "ini": "^2.0.0",
     "js-base64": "^3.6.0",
     "json5": "^2.2.0",
@@ -47,38 +47,37 @@
     "webext-redux": "^2.1.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.14",
+    "@babel/core": "^7.13.15",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/preset-env": "^7.13.12",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@babel/register": "^7.13.14",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
-    "chai-webdriver": "^1.2.3",
-    "chromedriver": "^89.0.0",
-    "copy-webpack-plugin": "^8.1.0",
-    "css-loader": "^5.2.0",
-    "eslint": "^7.23.0",
+    "chromedriver": "^90.0.0",
+    "copy-webpack-plugin": "^8.1.1",
+    "css-loader": "^5.2.4",
+    "eslint": "^7.24.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-json": "^2.1.2",
     "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.23.2",
     "git-revision-webpack-plugin": "^3.0.6",
     "html-webpack-plugin": "5.3.1",
     "jimp": "^0.16.1",
     "less": "^4.1.1",
-    "less-loader": "^8.0.0",
-    "mini-css-extract-plugin": "^1.4.0",
+    "less-loader": "^8.1.1",
+    "mini-css-extract-plugin": "^1.5.0",
     "mocha": "^8.2.9",
-    "postcss": "^8.2.9",
+    "postcss": "^8.2.10",
     "raw-loader": "^4.0.2",
     "responsive-loader": "^2.3.0",
-    "selenium-webdriver": "^4.0.0-beta.2",
-    "webpack": "^5.28.0",
+    "selenium-webdriver": "^4.0.0-beta.3",
+    "webpack": "^5.34.0",
     "webpack-cli": "^4.6.0",
     "webpack-extension-reloader": "^1.1.4",
     "zip-webpack-plugin": "^4.0.1"
