--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "version": "7.1.0",
   "author": "Severin Neumann <severin.neumann@altmuehlnet.de>",
   "homepage_url": "https://github.com/Appdynamics/demomonkey/",
-  "content_security_policy": "script-src 'self' 'unsafe-eval' https://apis.google.com; object-src 'self'",
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "icons": {
     "16": "icons/monkey_16.png",
     "48": "icons/monkey_48.png",
@@ -27,14 +27,6 @@
     "default_title": "DemoMonkey",
     "default_popup": "popup.html"
   },
-  "oauth2": {
-  "client_id": "534261080696-p6noculfhpdt1qhv1o6m9qc42ht2a18r.apps.googleusercontent.com",
-  "scopes":[
-    "https://www.googleapis.com/auth/drive",
-    "https://www.googleapis.com/auth/drive.file",
-    "https://www.googleapis.com/auth/drive.appdata"
-  ]
-},
   "permissions": [
     "storage", "unlimitedStorage", "activeTab", "contextMenus", "identity"
   ],
