--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "deep-is": "^0.1.3",
     "deepmerge": "^4.2.2",
     "fast-json-patch": "^3.0.0-1",
+    "highlight.js": "^11.0.1",
     "ini": "^2.0.0",
     "js-base64": "^3.6.0",
     "json5": "^2.2.0",
     "jszip": "^3.6.0",
     "lodash.omit": "^4.5.0",
+    "marked": "^2.1.3",
     "moment": "^2.29.1",
     "mousetrap": "^1.6.5",
     "prop-types": "^15.7.2",
@@ -41,7 +43,6 @@
     "react-toggle-button": "^2.2.0",
     "react-treebeard": "^3.2.4",
     "redux": "^4.1.0",
-    "showdown": "^1.9.1",
     "uuid": "^8.3.2",
     "webext-redux": "^2.1.7"
   },
